# jbsync

./: .editorconfig  .gitignore  .publisher.json  CLAUDE.md  Cargo.toml  README.md  Runfile.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: change.rs  editor.rs  lib.rs  prompt.rs  runner.rs
crates/idesync/: Cargo.toml
crates/idesync/src/: main.rs
crates/idesync/tests/: integration.rs  vscode.rs
crates/idesync/tests/fixtures/: Verona Dark.icls  editor-font.xml  idea64.vmoptions
crates/jetbrains/: Cargo.toml
crates/jetbrains/schema/: idesync-jetbrains.schema.json
crates/jetbrains/src/: cli.rs  config.rs  default_keymap.rs  discovery.rs  extract.rs  launcher.rs  lib.rs  plan.rs  settings.rs
crates/jetbrains/src/appliers/: files.rs  keymap.rs  mod.rs  options.rs  plugins.rs  scheme.rs  vmoptions.rs
crates/vscode/: Cargo.toml
crates/vscode/schema/: idesync-vscode.schema.json
crates/vscode/src/: cli.rs  config.rs  jsonc.rs  keymap.rs  lib.rs  sync.rs  vsix.rs
schema/: jbsync.schema.json
src/: cli.rs  config.rs  default_keymap.rs  discovery.rs  extract.rs  launcher.rs  main.rs  plan.rs  platform.rs  scheme_merge.rs  settings.rs  xmlpatch.rs
src/appliers/: files.rs  keymap.rs  mod.rs  named_settings.rs  plugins.rs  scheme.rs  vmoptions.rs
tests/: integration.rs
tests/fixtures/: disabled_plugins.txt  ide.general.xml
