[workspace]
resolver = "2"
members = ["crates/core", "crates/jetbrains", "crates/vscode", "crates/idesync"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JoaaoVerona/idesync"

[workspace.dependencies]
idesync-core = { path = "crates/core" }
idesync-jetbrains = { path = "crates/jetbrains" }
idesync-vscode = { path = "crates/vscode" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
dirs = "5"
similar = "2"
anyhow = "1"
dialoguer = "0.11"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
