[package]
name = "idesync-core"
description = "Shared core for idesync: the pluggable Editor trait, file-change model, OS abstraction, and apply/diff/backup runner."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
similar = { workspace = true }
dialoguer = { workspace = true }
