[package]
name = "idesync-jetbrains"
description = "idesync editor plugin for JetBrains IDEs (IntelliJ IDEA, WebStorm, RustRover, … and Android Studio)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
idesync-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
